--- a/.github/workflows/numba_self_host.yml
+++ b/.github/workflows/numba_self_host.yml
@@ -16,6 +16,7 @@ jobs:
         pwd
         ls
         module load cuda/12 openmpi/4.0_gcc-10
+        source ~/.bashrc
         conda create --name ghaction_temp python=3.11
         conda activate ghaction_temp
         which python
