adding an init during run

--- a/.github/workflows/numba_self_host.yml
+++ b/.github/workflows/numba_self_host.yml
@@ -23,5 +23,6 @@ jobs:
         bash install.sh --hpc
     - name: Regression Test - Numba
       run: |
+          conda activate gh_action_temp
           cd test/regression
           python run.py --mode=numba
