--- a/.github/workflows/numba_self_host.yml
+++ b/.github/workflows/numba_self_host.yml
@@ -17,11 +17,12 @@ jobs:
         ls
         #module load cuda/12 openmpi/4.0_gcc-10
         source ~/.bashrc
+        conda init
+	source ~/.bashrc
         conda create --name ghaction_temp python=3.11
         conda activate ghaction_temp
         which python
         bash install.sh --hpc
-        nvidia-smi
     - name: Debug
       run: |
         source ~/.bashrc
