--- a/.github/workflows/numba_self_host.yml
+++ b/.github/workflows/numba_self_host.yml
@@ -41,4 +41,4 @@ jobs:
         source ~/miniconda3/etc/profile.d/conda.sh
         conda activate ghaction_temp
         cd test/regression
-        python run.py --mode=numba --mode=gpu
+        python run.py --mode=numba --target=gpu
